correlation mobile css fixed and some css animations for logo and button hover

--- a/src/frontend/static/css/correlation.css
+++ b/src/frontend/static/css/correlation.css
@@ -43,7 +43,7 @@
 
 #settings {
     width: 10vw;
-    background-color: grey;
+    background-color: white;
     padding: 10px;
 }
 
@@ -75,7 +75,7 @@
 }
 
 #settings form #r {
-    float: right;
+    float: left;
 }
 
 #graph {
@@ -109,11 +109,11 @@ input[type=submit]:disabled {
 	}
 	#graph{
 		width: 100%;
-		order: 1;
+		order: 2;
 	}
 	#form{
 		width: 100%;
-		order: 2;
+		order: 1;
 	}
 	#warning{
 		height: auto;
@@ -138,6 +138,6 @@ input[type=submit]:disabled {
     }
     
     .corr {
-        min-height: 40vh;
+        min-height: 4vh;
     }
 }
